<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_taller2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.tallerenclases.Taller2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/Material"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtMaterial"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <RadioButton
                    android:text="@string/Cuero"
                    android:layout_width="wrap_content"
                    android:layout_height="53dp"
                    android:id="@+id/r4"
                    android:layout_weight="0.36" />

                <RadioButton
                    android:text="@string/Cuerda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r5"
                    android:layout_weight="0.36" />
            </RadioGroup>

            <TextView
                android:text="@string/Dije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDije"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:weightSum="1">

                <RadioButton
                    android:text="@string/Ancla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r6"
                    android:layout_weight="0.35" />

                <RadioButton
                    android:text="@string/Martillo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r7"
                    android:layout_weight="0.35" />
            </RadioGroup>

            <TextView
                android:text="@string/Tipo"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtTipo"
                android:textSize="24sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cmdTipo" />

            <TextView
                android:text="@string/Pagar_En"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtPago"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="165dp"
                android:layout_height="41dp"
                android:layout_weight="0.10" >

                <RadioButton
                    android:text="@string/Pesos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r8"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/Dolares"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r9"
                    android:layout_weight="1" />
            </RadioGroup>

            <Button
                android:text="@string/Resultado"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnResultado"
                android:onClick="Resultado" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
